tests/declaration_files_haste/declaration_files_haste.exp
Error -------------------------------------------------------------------------------------- foo/bar/nested_test.js:5:31

Cannot resolve module `SomeOtherModule`. [cannot-resolve-module]

   5| var SomeOtherModule = require('SomeOtherModule'); // error
                                    ^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:7:2

Cannot cast `min.fun()` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   foo/bar/nested_test.js:7:2
   7| (min.fun(): string);
       ^^^^^^^^^

References:
   external/_d3/min.js.flow:2:32
   2| declare export function fun(): number;
                                     ^^^^^^ [1]
   foo/bar/nested_test.js:7:13
   7| (min.fun(): string);
                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------- foo/bar/nested_test.js:8:2

Cannot cast `corge.fun()` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   foo/bar/nested_test.js:8:2
   8| (corge.fun(): string);
       ^^^^^^^^^^^

References:
   node_modules/qux/corge/lib/index.js.flow:2:32
   2| declare export function fun(): number;
                                     ^^^^^^ [1]
   foo/bar/nested_test.js:8:15
   8| (corge.fun(): string);
                    ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `Implicit.fun()` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:4:2
   4| (Implicit.fun(): string);
       ^^^^^^^^^^^^^^

References:
   ImplicitProvidesModule.js.flow:2:32
   2| declare export function fun(): number;
                                     ^^^^^^ [1]
   test.js:4:18
   4| (Implicit.fun(): string);
                       ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:8:2

Cannot cast `Flow.x` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:8:2
   8| (Flow.x: empty); // error: should be number
       ^^^^^^

References:
   pragmas/Flow.js.flow:9:17
   9| export const x: number = 123;
                      ^^^^^^ [1]
   test.js:8:10
   8| (Flow.x: empty); // error: should be number
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:20:2

Cannot cast `NotFlowShadowed.x` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:20:2
   20| (NotFlowShadowed.x: empty); // error: should be number
        ^^^^^^^^^^^^^^^^^

References:
   pragmas/NotFlowShadowed.js.flow:8:17
    8| export const x: number = 123;
                       ^^^^^^ [1]
   test.js:20:21
   20| (NotFlowShadowed.x: empty); // error: should be number
                           ^^^^^ [2]



Found 6 errors
